# edge-social-cards

./: .gitignore  Cargo.toml  README.md  fastly.toml
docs/: index.html  script.js  style.css
src/: main.rs
