[package]
name = "compute-starter-kit-rust-default"
version = "0.1.0"
authors = []
edition = "2018"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
fastly = "^0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
imageproc = "0.22.0"
image = { version = "0.23.14", default-features = false, features = ["png"] }
rusttype = "0.9.2"
textwrap = "0.14.2"
percent-encoding = "2.1.0"
